gitops/manifests/workloads/actual/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app.kubernetes.io/name: actual
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: actual
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actual
    spec:
      containers:
        - name: actual
          image: actualbudget/actual-server:24.8.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: actual-data
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-data
