gitops/manifests/workloads/actual/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  labels:
    app.kubernetes.io/name: actual
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4096m"
spec:
  rules:
    - host: "actual.bodkys.house"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  name: http
  tls:
    - hosts:
        - "actual.bodkys.house"
